Fix 'Umbrello toolbar icons does not match diagram widgets and cursors running under "breeze" style'.

Icons are now integrated into umbrello binary by using a qrc file.

BUG:364120
FIXED-IN:2.19.80 (KDE Applications 16.07.80)